--- a/thamarai.html
+++ b/thamarai.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML</title>
+    <style>
+        .container{
+            height: 100px;
+            width: 150px;
+            background-color: red;
+        }
+            .container:hover{
+                background-color: rgb(192, 214, 255);
+            }
+        
+    </style>
 </head>
 <body>
-    <h1>HI THIS IS ME</h1>
+    <div class="container">
+
+    </div>
 </body>
 </html>
